// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatableSelect component testing Disable multiple CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ gdZRVI"
  >
    <div
      class=" css-3iigni-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-7-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-yw5jbj-control"
      >
        <div
          class=" css-1iral9k-ValueContainer"
        >
          <div
            class=" css-tiolb5-multiValue"
          >
            <div
              class=" css-5kixvp-MultiValueGeneric"
            >
              hoge
            </div>
            <div
              aria-label="Remove hoge"
              class=" css-1v8dlmp-MultiValueRemove"
              role="button"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            class=" css-tiolb5-multiValue"
          >
            <div
              class=" css-5kixvp-MultiValueGeneric"
            >
              huga
            </div>
            <div
              aria-label="Remove huga"
              class=" css-1v8dlmp-MultiValueRemove"
              role="button"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            class=" css-1urfujn-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-controls="react-select-7-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="react-select-7-listbox"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              disabled=""
              id="react-select-7-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jSMfEi eDcIgw"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#B3BAC1"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-fqzh9e-menu"
        id="react-select-7-listbox"
      >
        <div
          class="sc-gsnTZi inqBSZ css-1jcex0u-MenuList"
        >
          <div
            class=" css-1ufqtev-NoOptionsMessage"
          >
            Not found
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Disable not CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ gdZRVI"
  >
    <div
      class=" css-3iigni-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-5-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-yw5jbj-control"
      >
        <div
          class=" css-14yxm9c-ValueContainer"
        >
          <div
            class=" css-1wzpoj0-placeholder"
            id="react-select-5-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-1urfujn-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-controls="react-select-5-listbox"
              aria-describedby="react-select-5-placeholder"
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="react-select-5-listbox"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              disabled=""
              id="react-select-5-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jSMfEi eDcIgw"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#B3BAC1"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-fqzh9e-menu"
        id="react-select-5-listbox"
      >
        <div
          class="sc-gsnTZi inqBSZ css-1jcex0u-MenuList"
        >
          <div
            aria-disabled="false"
            class=" css-1mw1c1j-option"
            id="react-select-5-option-0"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            aria-disabled="false"
            class=" css-1mw1c1j-option"
            id="react-select-5-option-1"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Disable one CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ gdZRVI"
  >
    <div
      class=" css-3iigni-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-6-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-yw5jbj-control"
      >
        <div
          class=" css-14yxm9c-ValueContainer"
        >
          <div
            class=" css-tncq6p-singleValue"
          >
            hoge
          </div>
          <div
            class=" css-1urfujn-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-controls="react-select-6-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="react-select-6-listbox"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              disabled=""
              id="react-select-6-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jSMfEi eDcIgw"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#B3BAC1"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-fqzh9e-menu"
        id="react-select-6-listbox"
      >
        <div
          class="sc-gsnTZi inqBSZ css-1jcex0u-MenuList"
        >
          <div
            aria-disabled="false"
            class=" css-1hd25el-option"
            id="react-select-6-option-0"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            aria-disabled="false"
            class=" css-1mw1c1j-option"
            id="react-select-6-option-1"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Error multiple CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ jDqySb"
  >
    <div
      class=" css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-10-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-q6ehzp-control"
      >
        <div
          class=" css-1iral9k-ValueContainer"
        >
          <div
            class=" css-tiolb5-multiValue"
          >
            <div
              class=" css-1644w8u-MultiValueGeneric"
            >
              hoge
            </div>
            <div
              aria-label="Remove hoge"
              class=" css-1v8dlmp-MultiValueRemove"
              role="button"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            class=" css-tiolb5-multiValue"
          >
            <div
              class=" css-1644w8u-MultiValueGeneric"
            >
              huga
            </div>
            <div
              aria-label="Remove huga"
              class=" css-1v8dlmp-MultiValueRemove"
              role="button"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            class=" css-17e9r92-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-controls="react-select-10-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="react-select-10-listbox"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-10-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            class="sc-hKMtZM"
          >
            <div
              aria-hidden="true"
              class=" css-1xc3v61-indicatorContainer"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jSMfEi eDcIgw"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#EB0A4E"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-vcx9vk-menu"
        id="react-select-10-listbox"
      >
        <div
          class="sc-gsnTZi inqBSZ css-1jcex0u-MenuList"
        >
          <div
            class=" css-1ufqtev-NoOptionsMessage"
          >
            Not found
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Error not CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ jDqySb"
  >
    <div
      class=" css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-8-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-q6ehzp-control"
      >
        <div
          class=" css-14yxm9c-ValueContainer"
        >
          <div
            class=" css-lunmsi-placeholder"
            id="react-select-8-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-17e9r92-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-controls="react-select-8-listbox"
              aria-describedby="react-select-8-placeholder"
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="react-select-8-listbox"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-8-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jSMfEi eDcIgw"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#EB0A4E"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-vcx9vk-menu"
        id="react-select-8-listbox"
      >
        <div
          class="sc-gsnTZi inqBSZ css-1jcex0u-MenuList"
        >
          <div
            aria-disabled="false"
            class=" css-1mw1c1j-option"
            id="react-select-8-option-0"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            aria-disabled="false"
            class=" css-1mw1c1j-option"
            id="react-select-8-option-1"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Error one CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ jDqySb"
  >
    <div
      class=" css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-9-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-q6ehzp-control"
      >
        <div
          class=" css-14yxm9c-ValueContainer"
        >
          <div
            class=" css-ayvmsf-singleValue"
          >
            hoge
          </div>
          <div
            class=" css-17e9r92-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-controls="react-select-9-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="react-select-9-listbox"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-9-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            class="sc-hKMtZM"
          >
            <div
              aria-hidden="true"
              class=" css-1xc3v61-indicatorContainer"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jSMfEi eDcIgw"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#EB0A4E"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-vcx9vk-menu"
        id="react-select-9-listbox"
      >
        <div
          class="sc-gsnTZi inqBSZ css-1jcex0u-MenuList"
        >
          <div
            aria-disabled="false"
            class=" css-1hd25el-option"
            id="react-select-9-option-0"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            aria-disabled="false"
            class=" css-1mw1c1j-option"
            id="react-select-9-option-1"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Normal multiple CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ jDqySb"
  >
    <div
      class=" css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-4-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-1oh1mzt-control"
      >
        <div
          class=" css-1iral9k-ValueContainer"
        >
          <div
            class=" css-tiolb5-multiValue"
          >
            <div
              class=" css-1x88s89-MultiValueGeneric"
            >
              hoge
            </div>
            <div
              aria-label="Remove hoge"
              class=" css-1v8dlmp-MultiValueRemove"
              role="button"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            class=" css-tiolb5-multiValue"
          >
            <div
              class=" css-1x88s89-MultiValueGeneric"
            >
              huga
            </div>
            <div
              aria-label="Remove huga"
              class=" css-1v8dlmp-MultiValueRemove"
              role="button"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            class=" css-17e9r92-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-controls="react-select-4-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="react-select-4-listbox"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-4-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            class="sc-hKMtZM"
          >
            <div
              aria-hidden="true"
              class=" css-1xc3v61-indicatorContainer"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jSMfEi eDcIgw"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#041C33"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-fqzh9e-menu"
        id="react-select-4-listbox"
      >
        <div
          class="sc-gsnTZi inqBSZ css-1jcex0u-MenuList"
        >
          <div
            class=" css-1ufqtev-NoOptionsMessage"
          >
            Not found
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Normal not CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ jDqySb"
  >
    <div
      class=" css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-2-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-1oh1mzt-control"
      >
        <div
          class=" css-14yxm9c-ValueContainer"
        >
          <div
            class=" css-ydlppi-placeholder"
            id="react-select-2-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-17e9r92-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-controls="react-select-2-listbox"
              aria-describedby="react-select-2-placeholder"
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="react-select-2-listbox"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-2-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jSMfEi eDcIgw"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#041C33"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-fqzh9e-menu"
        id="react-select-2-listbox"
      >
        <div
          class="sc-gsnTZi inqBSZ css-1jcex0u-MenuList"
        >
          <div
            aria-disabled="false"
            class=" css-1mw1c1j-option"
            id="react-select-2-option-0"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            aria-disabled="false"
            class=" css-1mw1c1j-option"
            id="react-select-2-option-1"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Normal one CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ jDqySb"
  >
    <div
      class=" css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-3-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-1oh1mzt-control"
      >
        <div
          class=" css-14yxm9c-ValueContainer"
        >
          <div
            class=" css-t1czkd-singleValue"
          >
            hoge
          </div>
          <div
            class=" css-17e9r92-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-controls="react-select-3-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="react-select-3-listbox"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-3-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            class="sc-hKMtZM"
          >
            <div
              aria-hidden="true"
              class=" css-1xc3v61-indicatorContainer"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jSMfEi eDcIgw"
            >
              <span
                class="sc-eCYdqJ iymozk"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#041C33"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-fqzh9e-menu"
        id="react-select-3-listbox"
      >
        <div
          class="sc-gsnTZi inqBSZ css-1jcex0u-MenuList"
        >
          <div
            aria-disabled="false"
            class=" css-1hd25el-option"
            id="react-select-3-option-0"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            aria-disabled="false"
            class=" css-1mw1c1j-option"
            id="react-select-3-option-1"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
